# browser-harness

./: AGENTS.md  CLAUDE.md  README.md  SKILL.md  install.md  pyproject.toml
interaction-skills/: make-video.md  video-template.html
skills/browser-harness-video/: SKILL.md
skills/browser-harness-video/assets/: house-style.json
skills/browser-harness-video/references/: edit-brief.md
skills/browser-harness-video/scripts/: compose_video.py  init_video.py  render_video.py  video_policy.py
src/browser_harness/: admin.py  daemon.py  helpers.py  paths.py  recorder.py  run.py  telemetry.py  video-template.html  video.py  video_render.py
tests/unit/: test_admin.py  test_recorder.py  test_run.py  test_skill.py  test_video_skill.py
